--- a/deck.mdx
+++ b/deck.mdx
@@ -1,6 +1,5 @@
 import { Appear, Head, Image } from "mdx-deck";
 import { FullScreenCode, Invert } from "mdx-deck/layouts";
-
 import SyntaxHighlighter from "react-syntax-highlighter/prism";
 import { atomLight, atomDark } from "react-syntax-highlighter/styles/prism";
 export { dark as theme } from "mdx-deck/themes";
@@ -50,6 +49,39 @@ export { dark as theme } from "mdx-deck/themes";
     </li>
   </ul>
 </Image>
+
+---
+
+## Types Of Tests
+
+---
+
+# Types Of Tests: Unit Tests
+
+Does A Component Work In Isolation?
+
+---
+
+# Types Of Tests: Integration Tests
+
+AKA - Feature Tests
+
+Do The Components Work Together?
+
+---
+
+# Types Of Tests: Acceptance Tests
+
+AKA - End to End Tests
+AKA - e2e Tests
+
+Does the whole system work together?
+
+---
+
+# JavaScript Testing In And Around WordPress
+
+## Part One: Testing React Apps
 
 ---
 
