--- a/deck.mdx
+++ b/deck.mdx
@@ -33,22 +33,29 @@ export { dark as theme } from "mdx-deck/themes";
   src="https://pbs.twimg.com/profile_images/1044050165269766149/YyCvrqoN_400x400.jpg"
   style={{
     display: "flex",
-    alignItems: "center",
+    alignItems: "top",
     justifyContent: "center",
     color: "white",
-    backgroundColor: "black"
+    backgroundColor: "black",
+    height: "50%"
   }}
 >
-  <h2>Hi I'm Josh</h2>
-  <ul>
-    <li>
-      <a href="https://JoshPress.net">JoshPress.net</a>
-    </li>
-    <li>
-      <a href="https://Twitter.com/Josh412">@josh412</a>
-    </li>
-  </ul>
+  <h2> 🌋Hi I'm Josh 🌋 </h2>
+  JavaScript & PHP Developer: CalderaWP 🌋
+
 </Image>
+
+- ℹ️ [JoshPress.net](https://joshpress.net)
+- 🌋[CalderaForms.com](https://CalderaForms.com)
+- 🐦[@josh412](https://twitter.com/josh412)
+
+---
+
+## Slides/ Code
+
+- Slides
+- Example Code Part One
+- Example Code Part Two
 
 ---
 
@@ -56,24 +63,25 @@ export { dark as theme } from "mdx-deck/themes";
 
 ---
 
-# Types Of Tests: Unit Tests
+# Types Of Tests
+
+## Unit Tests
 
 Does A Component Work In Isolation?
 
 ---
 
-# Types Of Tests: Integration Tests
+# Types Of Tests
 
-AKA - Feature Tests
+## Integration (Feature) Tests
 
 Do The Components Work Together?
 
 ---
 
-# Types Of Tests: Acceptance Tests
+# Types Of Tests
 
-AKA - End to End Tests
-AKA - e2e Tests
+## Acceptance (e2e) Tests
 
 Does the whole system work together?
 
@@ -815,4 +823,8 @@ They are a compliment to less expensive unit/ inegration tests.
 
 # 🤷 Any Questions? 🤷
 
-* Slides: [🤷]
+- Slides: [🤷]
+
+* ℹ️ [JoshPress.net](https://joshpress.net)
+* 🌋[CalderaForms.com](https://CalderaForms.com)
+* 🐦[@josh412](https://twitter.com/josh412)
